# IdeaXRPlugin

./: CMakeLists.txt  ReadMe.md
inc/core/: AABB.hpp  Array.hpp  Basis.hpp  CameraMatrix.hpp  Color.hpp  Defs.hpp  Dictionary.hpp  IVR.hpp  IVRGlobal.hpp  IVRProfiling.hpp  Math.hpp  NodePath.hpp  Plane.hpp  PoolArrays.hpp  Quat.hpp  RID.hpp  Rect2.hpp  Ref.hpp  String.hpp  TagDB.hpp  Transform.hpp  Transform2D.hpp  Variant.hpp  Vector2.hpp  Vector3.hpp  Wrapped.hpp
inc/ivr/: ivrnative_api_struct.gen.h
inc/ivr/android/: ivr_android.h
inc/ivr/arvr/: ivr_arvr.h
inc/ivr/native/: aabb.h  array.h  basis.h  color.h  dictionary.h  native.h  node_path.h  plane.h  pool_arrays.h  quat.h  rect2.h  rid.h  string.h  string_name.h  transform.h  transform2d.h  variant.h  vector2.h  vector3.h
inc/ivr/nativescript/: ivr_nativescript.h
inc/ivr/net/: ivr_net.h  ivr_webrtc.h
inc/object/: ArrayMesh.hpp  Camera.hpp  CanvasItem.hpp  Control.hpp  CryptoKey.hpp  Environment.hpp  Font.hpp  GlobalConstants.hpp  HTTPClient.hpp  HTTPRequest.hpp  IP.hpp  Image.hpp  InputEvent.hpp  InputEventKey.hpp  InputEventWithModifiers.hpp  MainLoop.hpp  Material.hpp  Mesh.hpp  MultiMesh.hpp  MultiplayerAPI.hpp  NetworkedMultiplayerPeer.hpp  Node.hpp  Object.hpp  PackedScene.hpp  PacketPeer.hpp  PacketPeerUDP.hpp  Physics2DDirectSpaceState.hpp  Physics2DShapeQueryParameters.hpp  PhysicsDirectSpaceState.hpp  PhysicsShapeQueryParameters.hpp  Reference.hpp  Resource.hpp  SceneState.hpp  SceneTree.hpp  SceneTreeTimer.hpp  Shader.hpp  Shape.hpp  Sky.hpp  Spatial.hpp  SpatialGizmo.hpp  (+15 more)
lib/: ideavr.windows.release.64.lib
src/: Interface.h  MyPlugin.cpp  MyScriptClass.cpp  MyScriptClass.h
test/: testDll.cpp
(+2 files in other folders)
